# claude-mate-agent

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .trivyignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.artifactory.yml  docker-compose.local-llm.yml  docker-compose.nvidia.yml  docker-compose.opensearch.yml  docker-compose.yml  mkdocs.yml  requirement.md
.github/: renovate.json
.github/workflows/: ci.yml  deploy.yml  on-demand.yml  pages.yml  release-cut.yml  release.yml  sandbox.yml  security.yml
charts/claude-mate-agent/: Chart.yaml  values-aks.yaml  values-openshift.yaml  values.yaml
container/: app.py  guardrails.py  pyproject.toml  requirements.txt
container/personas/: architect.md  devops.md  security.md  software-architect.md  sre.md
container/tests/: conftest.py  test_ci_audit.py  test_guardrails.py  test_http_handler.py  test_logging.py  test_main.py  test_parse_output.py  test_persona.py
docs/: architecture.md  container.md  dora-metrics.md  examples.md  getting-started.md  github-actions.md  gitlab-ci.md  guardrails.md  helm-chart.md  index.md  llm-gateway.md  local-dev.md  mcp-deploy.md  monitoring.md  personas.md  quality-gates.md  sandbox.md  security-scanning.md  security.md  solution-architecture.md  versioning.md
docs/assets/: architecture.drawio
docs/stylesheets/: extra.css
examples/: README.md
examples/argocd/: Application.yaml  README.md
litellm/: config.yaml
prometheus/: dora_rules.yml  prometheus.yml
scripts/: bump-version.sh  dora-emit.sh  make.ps1  test-local-llm.sh
(+62 files in other folders)
