[project]
name = "claude-mate-agent"
version = "0.1.0"
description = "Process supervisor and HTTP wrapper for the Claude Code agent container"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-sdk==1.26.0",
    "opentelemetry-exporter-otlp-proto-http==1.26.0",
]

[project.optional-dependencies]
# build extra: only needed in the python-builder Docker stage
build = [
    "pyinstaller>=6.11",
]
# test extra: unit tests, coverage, and Python SAST (Bandit). Used by CI and
# the local `make test` / `make sast` targets — never bundled into the image.
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "bandit[toml]>=1.7",
]

[tool.uv]
# app.py is a script, not a distributable package — do not install it
package = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=50",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = []  # add finding IDs (e.g. "B404") here only with documented justification
